[build-system]
requires = ["setuptools<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-duplicate-keys"
version = "2025.8.19"
description = "Flatten/ Unflatten and Load(s)/ Dump(s) JSON File/ Object with Duplicate Keys"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["TPCyberSec", "json", "duplicate keys", "json duplicate keys", "flatten", "unflatten"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: Jython"
]

authors = [
  { name = "TP Cyber Security", email = "tpcybersec2023@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/tpcybersec/json-duplicate-keys"

[tool.setuptools]
packages = ["json_duplicate_keys"]