[build-system]
requires = ["setuptools<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-duplicate-keys"
version = "2025.9.9"
description = "Flatten/ Unflatten and Load(s)/ Dump(s) JSON File/ Object with Duplicate Keys"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
keywords = ["TPCyberSec", "json", "duplicate keys", "json duplicate keys", "flatten", "unflatten"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: Jython"
]

authors = [
  { name = "TP Cyber Security", email = "tpcybersec2023@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/TPCyberSec/json-duplicate-keys"

[tool.setuptools]
packages = ["json_duplicate_keys"]